import React from 'react';
import ReactDOM from 'react-dom';
import { render } from '@testing-library/react';
import renderer from 'react-test-renderer';
import Enzyme, { shallow } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import App, { Search, Button, Table } from './App';

Enzyme.configure({ adapter: new Adapter() });

describe ('App', () => {

    test('renders learn react link', () => {
      const { getByText } = render(<App />);
      const linkElement = getByText(/learn react/i);
      expect(linkElement).toBeInTheDocument();
	});
	
	test('has a valid snapshot', () => {
		const component = renderer.create(
			<App />
		);
		const tree = component.toJSON();
		expect(tree).toMatchSnapshot();
	});

})

describe ('Search', () => {

	it('renders without crashing', ()=> {
		const div = document.createElement('div');
		ReactDOM.render(<Search>Search</Search>, div);
		ReactDOM.unmountComponentAtNode(div);
	})
    // test('renders learn react link', () => {
    //   const { getByText } = render(<App />);
    //   const linkElement = getByText(/learn react/i);
    //   expect(linkElement).toBeInTheDocument();
	// });
	
	test('has a valid snapshot', () => {
		const component = renderer.create(
			<Search> Search </Search>
		);
		const tree = component.toJSON();
		expect(tree).toMatchSnapshot();
	});

})

describe ('Button', () => {

	it('renders without crashing', ()=> {
		const div = document.createElement('div');
		ReactDOM.render(<Button>Give me More </Button>, div);
		ReactDOM.unmountComponentAtNode(div);
	})
    // test('renders learn react link', () => {
    //   const { getByText } = render(<App />);
    //   const linkElement = getByText(/learn react/i);
    //   expect(linkElement).toBeInTheDocument();
	// });
	
	test('has a valid snapshot', () => {
		const component = renderer.create(
			<Button> Give me More </Button>
		);
		const tree = component.toJSON();
		expect(tree).toMatchSnapshot();
	});

})

describe ('Table', () => {

	const props = {
		list: [
			{ title: '1', author: '1', num_comments: 1, points: 2, objectID: 'y', },
			{ title: '2', author: '2', num_comments: 1, points: 2, objectID: 'z', }
		],
		sortKey: 'TITLE',
		isSortReverse: false,
	};

	it('renders without crashing', ()=> {
		const div = document.createElement('div');
		ReactDOM.render(<Table {...props} />, div);
		ReactDOM.unmountComponentAtNode(div);
	})
    // test('renders learn react link', () => {
    //   const { getByText } = render(<App />);
    //   const linkElement = getByText(/learn react/i);
    //   expect(linkElement).toBeInTheDocument();
	// });
	
	test('has a valid snapshot', () => {
		const component = renderer.create(
			<Table {...props} />
		);
		const tree = component.toJSON();
		expect(tree).toMatchSnapshot();
	});

	it('shows two items in list', () => {
		const element = shallow(
			<Table {...props} />
		);

		expect(element.find('.table-row').length).toBe(2);
	});
})
